--- a/lingoappTcc/app/src/main/res/values/strings.xml
+++ b/lingoappTcc/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="action_mensagem_envio_ativ">Sua atividade foi enviada com sucesso.</string>
     <string name="msg_instrucao_participar_turma">Digite, no campo abaixo, o código da turma que deseja participar:</string>
     <string name="msg_instrucao_criar_turma">Preencha os campos abaixo com os dados da turma:</string>
+    <string name="queroacabaotcclogo">vo me m</string>
 
 </resources>
