--- a/lingoappTcc/app/src/main/res/values/strings.xml
+++ b/lingoappTcc/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="title_alterar_dados">Alterar Dados</string>
     <string name="title_criar_atividade">Criar Atividade</string>
     <string name="title_titulo_atividade">Título da Atividade</string>
+    <string name="title_gerenciar_turma">Gerenciar Turma</string>
+    <string name="title_convidar_estudante1">Convidar</string>
+    <string name="title_convidar_estudante2">Estudante</string>
 
     <!-- mensagens -->
     <string name="msg_sou_novo_quero_me">Sou novo, quero me </string>
@@ -34,8 +37,9 @@
     <string name="msg_digitar_senha">Senha:</string>
     <string name="msg_digitar_email">E-mail:</string>
     <string name="msg_instrucao_criar_atividade">Agora preencha com os dados da atividade:</string>
+    <string name="msg_instrucao_convidar_estudante">Digite o endereço de e-mail do estudante para enviar um convite para participar da turma</string>
 
-        <!-- separando em ordem-->
+    <!-- separando em ordem-->
     <string name="msg_instrucao_participar_turma">Digite, no campo abaixo, o código da turma que deseja participar:</string>
     <string name="msg_instrucao_criar_turma">Preencha os campos abaixo com os dados da turma:</string>
 
@@ -55,8 +59,13 @@
     <string name="action_cancelar">Cancelar</string>
     <string name="action_salvar">Salvar</string>
     <string name="action_excluir_conta">Excluir conta</string>
+    <string name="action_convidar_estudante">Convidar Estudante</string>
+    <string name="action_editar_turma">Editar Turma</string>
+    <string name="action_retirar_estudante">Retirar Estudante</string>
+    <string name="action_excluir_turma">Excluir Turma</string>
+    <string name="action_convidar">Convidar</string>
 
-        <!-- separando em ordem-->
+    <!-- separando em ordem-->
     <string name="action_enunciado1_Friends"> 1. A frase "You were my first kiss with Rachel?", dita pelo personagem Ross, é um erro gramatical proposital? Você consegue identificar o porquê das perguntas com a ordem afirmativa (sujeito + verbo) nos exemplos citados? </string>
     <string name="action_pendentes">Pendentes</string>
     <string name="action_disponiveis">Disponíveis</string>
@@ -67,6 +76,7 @@
     <string name="desc_logo_lingoapp">O desenho geométrico e simples da cabeça de uma raposa, que é o logo do aplicativo LingoApp</string>
     <string name="desc_avatar">Imagem de avatar que representa o usuário selecionado.</string>
     <string name="desc_botao_voltar">Seta para a esquerda selecionável para voltar à página anterior.</string>
+    <string name="desc_botao_fechar">Letra X selecionável para fechar a tela atual.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
