--- a/lingoappTcc/app/src/main/res/values/strings.xml
+++ b/lingoappTcc/app/src/main/res/values/strings.xml
@@ -97,5 +97,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_criar_turma">Criar Turma</string>
+    <string name="msg_nome_turma">nome da turma</string>
+    <string name="msg_senha_turma">senha da turma</string>
+    <string name="title_criar">Criar</string>
 
 </resources>
